--- a/views/test.ejs
+++ b/views/test.ejs
@@ -19,9 +19,9 @@
         eventSource.onmessage = function(event) {
             const memInfo = JSON.parse(event.data);
             document.getElementById('mem-info').innerHTML = `
-                <strong>Total Memory:</strong> ${memInfo.memTotal} GB <br>
-                <strong>Free Memory:</strong> ${memInfo.memFree} GB <br>
-                <strong>Used Memory:</strong> ${memInfo.memUsed} GB
+                <strong>Total Memory:</strong> ${memInfo.memTotal.value} ${memInfo.memTotal.unit} <br>
+                <strong>Free Memory:</strong> ${memInfo.memFree.value} ${memInfo.memFree.unit} <br>
+                <strong>Used Memory:</strong> ${memInfo.memUsed.value} ${memInfo.memUsed.unit}
             `;
         };
 
