--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,12 @@
 
     <link rel="stylesheet" href="/css/custom.css">
 
-    <title>resmon-web | main</title>
+    <title>resmon-web | home</title>
 </head>
 <body>
     <div class="container-fluid vw-100 vh-100 p-0 bg-body" data-bs-theme="dark">
         <div class="panel">
+            <div class="panel-button active"><i class="bi bi-house-fill"></i> Home</div>
             <div class="panel-button">Hello world</div>
         </div>
     </div>
